# eucalyptus

./: .bzrignore  .cproject  .gitignore  .gitmodules  .project  1.6-vmware-broker-script.txt  CHANGELOG  CONTRIBUTING  EUCALYPTUS-EEE-LICENSE  INSTALL  LICENSE  Makedefs.in  Makefile  README  README.md  ROLLCALL  VERSION  [build-windows.md]  aclocal.m4  botoclcinterface.py  configure  configure.ac  euca-console-server  eucalyptus-eee.spec  eucalyptus-equallogic.spec  eucalyptus-vmware.spec  eucalyptus-windows.spec  eucalyptus.spec  eucalyptus.spec.centos  eucalyptus.spec.in  eucalyptus.spec.suse  eui-server.py  eui.html  eui.ini  header.html  kyo_volume.js  launch.py  launcher.sh  login.html  rpm_build.sh  (+3 more)
admin-tools/: MANIFEST.in  Makefile  generate-manpages.sh  setup.py
clc/: .classpath  .cvsignore  .gitignore  .project  Makefile  build-alt.xml  build.gradle  build.xml  cloud.ipr  cloud.xml  config.groovy  eucalyptus.ipr  eunit  gradle.properties  pom.xml  regen-project.sh  settings.gradle
cluster/: CCclient.c  Makefile  axis2_svc_generated.patch  cc-client-marshal-adb.c  cc-client-marshal.h  cc-client-policy.xml  config-cc.h  eucalyptus-cluster.in  handlers-state.c  handlers-state.h  handlers.c  handlers.h  server-marshal-state.c  server-marshal-state.h  server-marshal.c  server-marshal.h  shutdownCC.c  windows-cc.c  windows-cc.h
console/: README.md  euca-console-server  launcher.sh  setup.py
debian/: axis2.xml  build-jars  changelog  control  copyright  eucalyptus-cc.config  eucalyptus-cc.dirs  eucalyptus-cc.install  eucalyptus-cc.postinst  eucalyptus-cc.postrm  eucalyptus-cc.prerm  eucalyptus-cloud.dirs  eucalyptus-cloud.install  eucalyptus-cloud.postinst  eucalyptus-cloud.postrm  eucalyptus-cloud.preinst  eucalyptus-cloud.prerm  eucalyptus-common.dirs  eucalyptus-common.install  eucalyptus-common.links  eucalyptus-common.postinst  eucalyptus-common.postrm  eucalyptus-common.preinst  eucalyptus-gl.install  eucalyptus-java-common.install  eucalyptus-java-common.links  eucalyptus-java-common.postinst  eucalyptus-java-common.prerm  eucalyptus-nc.config  eucalyptus-nc.dirs  eucalyptus-nc.install  eucalyptus-nc.postinst  eucalyptus-nc.prerm  eucalyptus-sc.install  eucalyptus-sc.postinst  eucalyptus-sc.prerm  eucalyptus-walrus.install  eucalyptus-walrus.postinst  eucalyptus-walrus.prerm  rules
devel/: .project  CloudWatchBulkDataImportTool.groovy  CloudWatchFalseDataSystemMetricGenerator.groovy  aliases.sh  check_ssl.sh  convergence.sh  db.sh  dbPass.sh  deps.sh  diffdbs.sh  dot-fsm.sh  dumpheap.groovy  dumpthreads.groovy  euca-WSDL2C.sh  export_databases.sh  failover.sh  fsm-pathTo.groovy  generate-jibx-xsd.sh  generate_reporting_data.sh  grabdbs.sh  groovy-starter.conf  groovy.sh  ha_transit.pl  import_databases.sh  jibx-tools-1.2.5.jar.README  log2dot.sh  makeProject.sh  mapIamQuotasToActions.groovy  nc-log-gnuplot.pl  populate_canonical_ids.groovy  postgres_alises.sh  project.sh  quick_cc.pl  quick_cloud.pl  quick_ha.pl  quick_nc.pl  quick_svc_lookup.pl  revcount.sh  runJUnitTest.sh  runTest.sh  (+4 more)
doxygen/: .gitignore  Makefile  cluster.doxyfile  eucalyptus.doxyfile  node.doxyfile  setup.sh  vmware-broker.doxyfile
extras/: README.monitoring  ganglia.sh  nagios.sh
gatherlog/: GLclient.c  Makefile  gl-client-marshal-adb.c  gl-client-marshal.h  handlers.c  handlers.h  server-marshal.c  server-marshal.h
js/: eucalyptus.js
locale/: en_US.csv  es.csv
m4/: python.m4
mockdata/: Addresses.json  ConsoleOutput.json  Groups.json  Images.json  Instances.json  Instances_original.json  Keypairs.json  Snapshots.json  Volumes.json  Zones.json
net/: .gitattributes  .gitignore  Makefile  TODO.txt  announce-arp.c  config-eucanetd.h  dev_handler.c  dev_handler.h  dhcp.c  dhcp.h  ebt_handler.c  ebt_handler.h  euca-arp.c  euca-to-mido.c  euca-to-mido.h  euca_arp.c  euca_arp.h  euca_gni.c  euca_gni.h  euca_lni.c  euca_lni.h  eucanetd.c  eucanetd.h  eucanetd_config.h  eucanetd_edge.c  eucanetd_edge.h  eucanetd_managed.c  eucanetd_managed.h  eucanetd_managednv.c  eucanetd_meter.c  eucanetd_meter.h  eucanetd_static.c  eucanetd_system.c  eucanetd_template.c  eucanetd_util.c  eucanetd_util.h  eucanetd_vpc.c  globalnetwork.c  globalnetwork.h  ipr_handler.c  (+10 more)
node/: Makefile  NCclient.c  axis2_svc_generated.patch  client-marshal-adb.c  client-marshal-fake.c  client-marshal-local.c  client-marshal.h  eucalyptus-node.in  handlers-dummy.c  handlers.c  handlers.h  handlers_default.c  handlers_kvm.c  handlers_qemu.c  handlers_xen.c  hooks.c  hooks.h  libvirt_nag.c  libvirt_tortura.c  nc-client-policy.xml  server-marshal.c  server-marshal.h  stress_NCclient.sh  test.c  test_nc.c  xml.c  xml.h
project/: .cproject  .project  cluster  devel  gatherlog  net  node  sc  storage  wsdl
roll/: Makefile
rpm/: eucalyptus.spec
server/: __init__.py  api.py  botoclcinterface.py  botojsonencoder.py  cachingclcinterface.py  clcinterface.py  configloader.py  console.ini  eui.ini  eui.txt  mockclcinterface.py  response.py  support.py  token.py
static/: eui.html  index.html
storage/: Makefile  OSGclient.c  SCclient.c  Wclient  Wclient.c  ami2vmx.c  ami2vmx.h  backing.c  backing.h  blobstore.c  blobstore.h  cache.c  cache.h  cmd.h  cmd_create.c  cmd_download.c  cmd_inject.c  diskfile.c  diskfile.h  diskutil.c  diskutil.h  do_convert.c  ebs_utils.c  ebs_utils.h  euca_imager.c  euca_vmdk  euca_volume.c  helpers.c  helpers.h  http.c  http.c.moved  http.h  http.h.moved  imager.c  imager.h  img.c  img.h  iscsi.c  iscsi.h  map.c  (+20 more)
systemd/: Makefile
tests/: .uiproxyclient.py.swp  addresstests.py  grouptests.py  imagetests.py  instancetests.py  keypairtests.py  loadtest.py  snapshottests.py  uiproxyclient.py  volumetests.py  zonetests.py
tools/: .gitignore  HelloWorld.java  Makefile  Makefile.gen  PopulateSnapPoints.groovy  accept.sh  add_key.pl  add_key.sh  add_marshalling.pl  add_service_policy.pl  add_wsdllocation.pl  authorize-migration-keys  authorize-migration-keys.pl  authorize-migration-keys.py  clcadmin-allow-admin-access  clcadmin-assume-system-credentials  clcadmin-copy-keys  cloud-cert.pem  (+118 more)
(+14503 files in other folders)
